--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,12 @@
     "@heroicons/react": "^2.2.0",
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/themes": "^3.2.1",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.4",
+    "gsap": "^3.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.4"
   },
