--- a/moolen-backend/.env
+++ b/moolen-backend/.env
@@ -2,4 +2,4 @@ DB_HOST=localhost
 DB_USER=root       
 DB_PASSWORD=root123
 DB_NAME=moolen
-PORT=3001 
+JWT_SECRET= w8N$u*zB&E)H@McQfTjWnZq4t7w!z%C*
