--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
     "gsap": "^3.13.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
