--- a/moolen-backend/package.json
+++ b/moolen-backend/package.json
@@ -12,11 +12,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "@hapi/hapi": "^21.4.0",
+    "@hapi/jwt": "^3.2.0",
+    "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "joi": "^17.13.3",
-    "mysql2": "^3.14.1"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.1",
+    "nanoid": "^3.3.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
