--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,17 @@
     "@radix-ui/themes": "^3.2.1",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.4",
+    "aos": "^2.3.4",
     "axios": "^1.9.0",
+    "framer-motion": "^12.16.0",
     "gsap": "^3.13.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
